# notebooklm-connector

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/notebooklm_connector/: __init__.py  __main__.py  cli.py  combiner.py  converter.py  crawler.py  models.py  report.py
tests/: conftest.py  test_cli.py  test_combiner.py  test_converter.py  test_crawler.py  test_math.py  test_report.py
