[project]
name = "notebooklm-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.0.0",
    "markdownify>=0.14.0",
]

[project.scripts]
notebooklm-connector = "notebooklm_connector.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["notebooklm_connector"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
